Closed Bug 10449 Opened 25 years ago Closed 25 years ago

Single Signon viewer hangs the browser

Categories

(Core :: Networking, defect, P3)

x86
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: morse, Assigned: gagan)

Details

Bring up the signon viewer by going to edit/wallet/display-signons.  The
single-signon viewer starts to come up.  The bottom frame (containing the signon
list) displays properly.  But the top frame (displaying the tabs) does not
display.  And the browser is frozen.

But here's something curious.  The following will not freeze the browser.  Bring
up the cookie viewer (edit/wallet/display-cookies).  Click on the tab on top
that says "display sites that can or cannot set cookies".  You get a crash
(already reported in bug 10441).  Surprisingly, you can recover from this crash
by simply telling the debugger to resume execution.  Do so.  Then close the
cookie viewer by pressing either OK or Cancel.  Now bring up the signon viewer.
At this point everything is fine.

So this bug may be related to 10441 but I wouldn't go as far as to say it was a
duplicate of that bug.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Oops, my fault.  Had some bad code in nsWalletService.cpp.  Just checked in the
fix.  Closing out report.
Status: RESOLVED → VERIFIED
Bulk move of all Necko (to be deleted component) bugs to new Networking

component.
You need to log in before you can comment on or make changes to this bug.